--- a/school_unity/UserMenu/teacher.xaml
+++ b/school_unity/UserMenu/teacher.xaml
@@ -22,9 +22,9 @@
             <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" Width="250" Height="65" FontSize="14"  Grid.Row="1" Text="Выберите пункт и нажмите на него" Grid.Column="1" />
-        <Button x:Name="Marks" Content="Войти" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="4" Background="White" Grid.Column="1" Click="EnterButton_Click"/>
-        <Button x:Name="" Content="Войти" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="3" Background="White" Click="EnterButton_Click" Margin="25,3,25,10"/>
-        <Button x:Name="EnterButton_Copy1" Content="Оценки" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="2" Background="White" Click="EnterButton_Click" Margin="25,5,25,8"/>
+        <Button x:Name="Marks" Content="Оценки" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="2" Background="White" />
+        <Button x:Name="x" Content="Ученики" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="3" Background="White"  />
+        <Button x:Name="QuitSession" Content="Выйти" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="4" Background="White" Click="QuitSession_Click" />
 
     </Grid>
 </Page>
