--- a/school_unity/Registration.xaml
+++ b/school_unity/Registration.xaml
@@ -21,8 +21,8 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" Width="250" Height="65" FontSize="14"  Grid.Row="1" Text="Введите данные и нажмите на &quot;Зарегистрироваться&quot;" Grid.Column="1" />
-        <Button x:Name="RegistrationButton" Content="Зарегистрироваться" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="4" Background="White" Grid.Column="1"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" Width="250" Height="65" FontSize="14"  Grid.Row="1" Text="Введите данные и нажмите на &quot;Зарегистрировать&quot;" Grid.Column="1" />
+        <Button x:Name="RegistrationButton" Content="Зарегистрировать" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="4" Background="White" Grid.Column="1"/>
         <TextBox x:Name="textBox" HorizontalAlignment="Center" Height="24"  Grid.Row="2" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Center" Width="250" Grid.Column="1" />
         <TextBox x:Name="textBox_Copy" HorizontalAlignment="Center" Height="24"  Grid.Row="3" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Center" Width="250" Grid.Column="1" />
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="350" Grid.RowSpan="6" VerticalAlignment="Top" Width="105" Cursor="Hand" MouseUp="Rectangle_MouseUp"/>
