--- a/school_unity/Registration.xaml
+++ b/school_unity/Registration.xaml
@@ -7,12 +7,14 @@
       mc:Ignorable="d" 
             d:DesignHeight="350" d:DesignWidth="525"
       Title="Registration">
-    <Grid>
+    <Grid Loaded="Grid_Loaded">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.5*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
             <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+
             <RowDefinition Height="1*"/>
             <RowDefinition Height="0.5*"/>
         </Grid.RowDefinitions>
@@ -22,11 +24,12 @@
             <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" Width="250" Height="65" FontSize="14"  Grid.Row="1" Text="Введите данные и нажмите на &quot;Зарегистрировать&quot;" Grid.Column="1" />
-        <Button x:Name="RegistrationButton" Content="Зарегистрировать" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="4" Background="White" Grid.Column="1"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Center" Height="24"  Grid.Row="2" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Center" Width="250" Grid.Column="1" />
-        <TextBox x:Name="textBox_Copy" HorizontalAlignment="Center" Height="24"  Grid.Row="3" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Center" Width="250" Grid.Column="1" />
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="350" Grid.RowSpan="6" VerticalAlignment="Top" Width="105" Cursor="Hand" MouseUp="Rectangle_MouseUp"/>
-        <TextBlock HorizontalAlignment="Center" TextAlignment="Center"  Text="&lt;" FontSize="40" VerticalAlignment="Center" Cursor="Hand" MouseUp="Rectangle_MouseUp"  Grid.RowSpan="5" Width="105"/>
+        <Button x:Name="RegistrationButton" Content="Зарегистрировать" HorizontalAlignment="Center" VerticalAlignment="Center" Width="250" Height="47" Grid.Row="5" Background="White" Grid.Column="1" Click="RegistrationButton_Click"/>
+        <TextBox x:Name="Login" HorizontalAlignment="Center" Height="24"  Grid.Row="2" TextWrapping="Wrap" Text="Логин" VerticalAlignment="Center" Width="250" Grid.Column="1" />
+        <TextBox x:Name="Password" HorizontalAlignment="Center" Height="24"  Grid.Row="3" TextWrapping="Wrap" Text="Пароль" VerticalAlignment="Center" Width="250" Grid.Column="1" />
+        <ComboBox x:Name="ComboBox" DisplayMemberPath="RoleName" ItemsSource="{Binding RoleID}" HorizontalAlignment="Center" Height="24"  Grid.Row="4"  Text="Пароль" VerticalAlignment="Center" Width="250" Grid.Column="1" />
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="350" Grid.RowSpan="7" VerticalAlignment="Top" Width="105" Cursor="Hand" MouseUp="Rectangle_MouseUp"/>
+        <TextBlock HorizontalAlignment="Center" TextAlignment="Center"  Text="&lt;" FontSize="40" VerticalAlignment="Center" Cursor="Hand" MouseUp="Rectangle_MouseUp"  Grid.RowSpan="2" Width="105"  Grid.Row="2"/>
 
-        </Grid>
+    </Grid>
 </Page>
