--- a/school_unity/ChangePassword.xaml
+++ b/school_unity/ChangePassword.xaml
@@ -8,13 +8,13 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ChangePassword">
 
-    <StackPanel>
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         
         
         <TextBox x:Name="OldPas" Height="23" TextWrapping="Wrap" Text="Старый Пароль"/>
         <TextBox x:Name="NewPas" Height="23" TextWrapping="Wrap" Text="Новый Пароль"/>
         <TextBox x:Name="Repeat" Height="23" TextWrapping="Wrap" Text="Повторите Новый Пароль"/>
-        <Button Content="Сохранить" Width="200" Height="50" Click="Button_Click"/>
+        <Button Content="Сохранить" Width="200" Height="50" Click="Button_Click" Background="White"/>
 
     </StackPanel>
 </Page>
