--- a/school_unity/UserMenu/admin.xaml
+++ b/school_unity/UserMenu/admin.xaml
@@ -10,9 +10,9 @@
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock x:Name="textBlock" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" Width="310" Height="45" FontSize="14" Text="Выберите пункт и нажмите на него" />
-        <Button x:Name="AddSchoolarButton" Content="Добавление данных ученика" HorizontalAlignment="Center" VerticalAlignment="Center" Width="311" Height="47" Background="White" />
         <Button x:Name="AddUserButton" Content="Регистрация нового пользователя" HorizontalAlignment="Center" VerticalAlignment="Center" Width="311" Height="47" Background="White" Click="AddUserButton_Click" />
-        <Button x:Name="EditSchoolarButton" Content="Редактирование данных ученика" HorizontalAlignment="Center" VerticalAlignment="Center" Width="311" Height="47" Background="White" />
+        <Button x:Name="EditUserButton" Content="Редактирование пользователя" HorizontalAlignment="Center" VerticalAlignment="Center" Width="311" Height="47" Background="White" />
+        <Button x:Name="DeleteUserButton" Content="Удаление пользователя" HorizontalAlignment="Center" VerticalAlignment="Center" Width="311" Height="47" Background="White" Click="DeleteUserButton_Click" />      
 
         <Button x:Name="ExitButton_Copy" Content="Выход из системы" HorizontalAlignment="Center" VerticalAlignment="Center" Width="311" Height="47" Background="White" Click="ExitButton_Click"/>
     </StackPanel>
