--- a/school_unity/ChangePassword.xaml
+++ b/school_unity/ChangePassword.xaml
@@ -9,8 +9,7 @@
       Title="ChangePassword">
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        
-        
+        <TextBox x:Name="Login" Height="23" TextWrapping="Wrap" Text="Логин"/>
         <TextBox x:Name="OldPas" Height="23" TextWrapping="Wrap" Text="Старый Пароль"/>
         <TextBox x:Name="NewPas" Height="23" TextWrapping="Wrap" Text="Новый Пароль"/>
         <TextBox x:Name="Repeat" Height="23" TextWrapping="Wrap" Text="Повторите Новый Пароль"/>
